# api-integration

./: .env.example  .gitignore  BUILD_WHEEL.md  INSTALL_FROM_WHEEL.md  README.md  VERIFICATION.md  pyproject.toml  requirements.txt
.github/workflows/: dev-tests.yml  release.yml
config/: trusted_recipients.json
docs/: BUILD_WHEEL.md  DEPLOYMENT_WINDOWS.md  INSTALL_FROM_WHEEL.md  VERIFICATION.md  rfq-v1.yaml
scripts/: example.py  main.py
src/: config.py  constants.py  main.py
src/api_integration/: __init__.py  config.py  constants.py  logger.py  logging_config.py  pipeline.py
src/api_integration/excel/: convert.py  excel_pipeline.py  lot.py  rfq.py
src/api_integration/mail/: __init__.py  compose.py  fetch.py  send.py  trusted.py  utils.py
src/api_integration/mail/ews/: __init__.py  fetch.py  helpers.py  send.py
src/api_integration/mail/exchange/: __init__
src/api_integration/mail/imap/: __init__.py  fetch.py
src/api_integration/mail/smtp/: __init__.py  send.py
src/api_integration/sevenrights/: __init__.py
src/api_integration/sevenrights/api/: get_lot_template.py  get_rfq.py  get_rfq_lot.py  patch_rfq_organizer.py  post_lot_template.py  post_rfq.py  post_rfq_lot.py  put_rfq_supplier_group_ids.py  search_rfq.py  test_post_lot_template.py  test_post_rfq.py  test_post_rfq_lot.py  test_validate_rfq.py  utils.py
src/api_integration/sevenrights/api/schemas/: api_requests.py  api_results.py
src/api_integration/sevenrights/rfq/: create.py  create_rfq_pipeline.py  utils.py
src/excel/: convert.py  excel_pipeline.py  excel_reader.py  lot.py  rfq.py
src/mail/: compose.py  fetch.py  mail.py  sanitizers.py  send.py  trusted.py  utils.py
src/mail/validation/: attachments.py
src/sevenrights/api/: get_rfq.py  get_rfq_lot.py  patch_rfq_organizer.py  post_lot_template.py  post_rfq.py  post_rfq_lot.py  put_rfq_supplier_group_ids.py  search_rfq.py  test_post_rfq.py  utils.py
src/sevenrights/api/schemas/: rfq.py
src/sevenrights/rfq/: create.py  split_rfq_payload.py
tests/: conftest.py
tests/api_integration/excel/: test_rfq.py
tests/api_integration/mail/: test_compose.py  test_utils.py
tests/api_integration/sevenrights/api/: test_post_rfq.py
