[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api_integration"
dynamic = ["version"]
description = "API integration for 7rights RFQ automation"
readme = "README.md"
authors = [
    {name = "Anton Ryabchikov", email = "ryabchikovap@bsc.sibur.ru"},
]
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.11.10",
    "pydantic-settings==2.10.1",
    "requests==2.33.0",
    "openpyxl==3.1.5",
    "exchangelib==5.6.0",
]

[project.scripts]
run-api-integration = "api_integration.pipeline:run_pipeline_with_lock"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_file = "src/api_integration/_version.py" # Опционально: создаст файл версии внутри пакет